fix: scrollbar to be 6px

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -73,7 +73,7 @@ body {
 /* scrollbar */
 
 ::-webkit-scrollbar {
-  width: 1em;
+  width: 6px;
 }
 
 ::-webkit-scrollbar-track {
